<resources>
    <string name="app_name">Niyyah</string>
    <string name="hello">Hello!</string>
    <string name="hello_user">Hello, %1$s!</string>
    <string name="greeting">"Let's build momentum today!\ one small win at a time."</string>
    <string name="getstarted">Get Started!</string>
    <string name="get_started_now">Get Started now</string>
    <string name="powered_by">"Powered by "</string>
    <string name="create_an_account">"Create an account or sign in to make your day"</string>
    <string name="create_an_account_to_continue">"Create an account to continue"</string>
    <string name="sign_in">"Sign In"</string>
    <string name="sign_up">"Sign Up"</string>
    <string name="log_out">"Log Out"</string>
    <string name="forgot_password">"Forgot Password?"</string>
    <string name="forgot_your_password">"Forgot Your Password?"</string>
    <string name="sign_in_to_your_account">"Sign in to your\nAccount"</string>
    <string name="sign_up_your_account">"Sign up your\nAccount"</string>
    <string name="create_account_subtitle">"Create an account or sign in to make your day"</string>
    <string name="save">"Save"</string>
    <string name="edit">"Edit"</string>
    <string name="email">"Email"</string>
    <string name="password">"Password"</string>
    <string name="confirm_password">"Confirm Password"</string>
    <string name="first_name">"First Name"</string>
    <string name="last_name">"Last Name"</string>
    <string name="username">"Username"</string>
    <string name="gender">"Gender"</string>
    <string name="nationality">"Nationality"</string>
    <string name="birth_of_date">"Birth of date"</string>
    <string name="phone_number">"Phone number"</string>
    <string name="edit_profile">"Edit Profile"</string>
    <string name="dont_have_account">"Don\'t have an account? "</string>
    <string name="already_have_account">"Already have an account? "</string>

    <!-- Home -->
    <string name="my_task">"My Task"</string>
    <string name="ongoing_task">"Ongoing Tasks"</string>
    <string name="completed_task">"Completed Tasks"</string>
    <string name="no_ongoing_task">"No ongoing tasks. Add a new task!"</string>
    <string name="no_completed_task">"No completed tasks yet."</string>
    <string name="progress_percent">%1$d%%</string>
    <string name="today">Today</string>

    <!-- Task -->
    <string name="new_task">"New Task"</string>
    <string name="edit_task">"Edit Task"</string>
    <string name="create">"Create"</string>
    <string name="delete">"Delete"</string>
    <string name="title">"Title"</string>
    <string name="details">"Details"</string>
    <string name="due_date">"Due Date"</string>
    <string name="time">"Time"</string>
    <string name="repeat">"Repeat"</string>

    <!-- Profile -->
    <string name="profile">"Profile"</string>
    <string name="name">"Name"</string>
    <string name="username_format">"@%1$s"</string>
    <string name="dropdown">Dropdown</string>
    <string name="completed_today">Completed Today</string>
    <string name="_0">0%</string>
    <string name="future">Future</string>
</resources>